--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "backend",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@joeattardi/emoji-button": "^2.12.1",
+    "bad-words": "^3.0.3",
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "socket.io": "^2.3.0",
+    "socketio-file-upload": "^0.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.7"
+  }
 }
